# src/api/models/project.ts
@@ -80,11 +80,5 @@ export interface Project {
      * @memberof Project
      */
     'name': string;
-    /**
-     * The organisation ID that the project belongs to
-     * @type {string}
-     * @memberof Project
-     */
-    'org_id'?: string;
 }
 
